--- a/omc/webapp/templates/snippets/header.html
+++ b/omc/webapp/templates/snippets/header.html
@@ -11,7 +11,15 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#">Quản lý</a></li>
-                <li><a href="#">Người dùng 1</a></li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Người dùng 1 <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Thông tin tài khoản</a></li>
+                        <li><a href="#">Đổi mật khẩu</a></li>
+                        <li class="drow"></li>
+                        <li><a href="#">Đăng xuất</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
