--- a/omc/webapp/templates/users/user.html
+++ b/omc/webapp/templates/users/user.html
@@ -1,1 +1,21 @@
-{% extends 'layout.html' %}
+{% extends 'layout.html' %} {% block content %}
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">
+            Tên người dùng <small>121212</small>
+        </h1>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-12">
+        <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#tab-overview">Thông tin chung</a></li>
+            <li><a data-toggle="tab" href="#tab-contests">Cuộc thi đã tham gia</a></li>
+        </ul>
+        <div class="tab-content">
+            {% include 'users/tab_overview.html' %}
+            {% include 'users/tab_contests.html' %}
+        </div>
+    </div>
+</div>
+{% endblock %}
