--- a/omc/webapp/templates/snippets/header.html
+++ b/omc/webapp/templates/snippets/header.html
@@ -10,16 +10,19 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated %}
                 <li><a href="#">Quản lý</a></li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Người dùng 1 <span class="caret"></span></a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{ user }} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Thông tin tài khoản</a></li>
                         <li><a href="#">Đổi mật khẩu</a></li>
-                        <li class="drow"></li>
-                        <li><a href="#">Đăng xuất</a></li>
+                        <li><a href="{% url 'webapp:logout' %}">Đăng xuất</a></li>
                     </ul>
                 </li>
+                {% else %}
+                <li><a href="{% url 'webapp:login' %}">Đăng nhập</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
