--- a/omc/webapp/templates/snippets/header.html
+++ b/omc/webapp/templates/snippets/header.html
@@ -11,11 +11,13 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
+                {% if user.is_superuser or user.can_create_contest %}
                 <li><a href="#">Quản lý</a></li>
+                {% endif %}
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{ user }} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Thông tin tài khoản</a></li>
+                        <li><a href="{% url 'webapp:user' %}">Thông tin tài khoản</a></li>
                         <li><a href="#">Đổi mật khẩu</a></li>
                         <li><a href="{% url 'webapp:logout' %}">Đăng xuất</a></li>
                     </ul>
