Implement contests loading function

--- a/omc/webapp/templates/index.html
+++ b/omc/webapp/templates/index.html
@@ -38,4 +38,8 @@
         </div>
     </div>
 </div>
-{% endblock content %}
+{% endblock %}
+
+{% block scripts %}
+<script type="text/javascript" src="{% static 'scripts/index.js' %}"></script>
+{% endblock %}
