--- a/omc/webapp/templates/contests/contests.html
+++ b/omc/webapp/templates/contests/contests.html
@@ -26,7 +26,7 @@
 
 <script type="text/javascript">
 var contestsApiUrl = '{% url 'contests:contests' %}';
-var contestUrl = '{% url 'webapp:contest_overview' %}';
+var contestAdminUrl = '{% url 'webapp:contest_admin' %}';
 var createApiUrl = '{% url 'contests:create' %}';
 </script>
 
