--- a/omc/webapp/templates/contests/layout.html
+++ b/omc/webapp/templates/contests/layout.html
@@ -9,9 +9,8 @@
 {% block content %}
 <div class="row">
     <div class="col-lg-12">
-        <div class="pull-right page-header-label"><span class="label label-danger">Đã tham gia</span></div>
         <h1 class="page-header">
-            Tên hoạt động
+            {{ contest.name }}
         </h1>
     </div>
 </div>
