Update multiple choice test overview settings

--- a/omc/webapp/templates/contests/admin_tab_settings_overview.html
+++ b/omc/webapp/templates/contests/admin_tab_settings_overview.html
@@ -1,5 +1,5 @@
 <div id="tab-oveview" class="tab-pane fade in active">
-    <div id="alert-frame"></div>
+    <div id="overview-alert-frame"></div>
     <div class="form-horizontal">
         <div class="form-group">
             <label class="control-label col-md-2" for="contest-name">Tên hoạt động</label>
