--- a/omc/webapp/templates/contests/admin.html
+++ b/omc/webapp/templates/contests/admin.html
@@ -30,8 +30,9 @@
 
 <script type="text/javascript">
 var contestId = {{ contest.id }};
-var updateOverviewUrl ='{% url 'contests:update' %}';
+var updateUrl ='{% url 'contests:update' %}';
 </script>
 
 <script type="text/javascript" src="{%  static 'scripts/contest-settings.js' %}"></script>
+<script type="text/javascript" src="{%  static 'scripts/contest-mctest-settings.js' %}"></script>
 {% endblock %}
