--- a/omc/webapp/templates/contests/admin_tab_settings_mc_test.html
+++ b/omc/webapp/templates/contests/admin_tab_settings_mc_test.html
@@ -1,17 +1,18 @@
 <div id="tab-mc-test" class="tab-pane fade">
+    <div id="mctest-alert-frame"></div>
     <h4>Cấu hình</h4>
     <div class="form-horizontal">
         <div class="form-group">
-            <label class="control-label col-md-3" for="contest-name">Sử dụng phần thi</label>
+            <label class="control-label col-md-3">Sử dụng phần thi</label>
             <div class="col-md-9">
-                <input type="checkbox">
+                <input type="checkbox" id="use-mctest" {% if contest.use_mc_test %}checked{% endif %}>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-md-3" for="contest-name">Thời gian thi (phút)</label>
             <div class="col-md-9">
                 <div class="form-inline">
-                    <input type="number" class="form-control">
+                    <input type="number" class="form-control" min="0" value="{{ contest.mc_test_time }}" id="mctest-time">
                 </div>
             </div>
         </div>
@@ -19,13 +20,13 @@
             <label class="control-label col-md-3" for="contest-name">Số câu hỏi</label>
             <div class="col-md-9">
                 <div class="form-inline">
-                    <input type="number" class="form-control">
+                    <input type="number" class="form-control" min="0" value="{{ contest.mc_test_questions }}" id="mctest-questions">
                 </div>
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-offset-3 col-md-9">
-                <button type="submit" class="btn btn-success">Cập nhật</button>
+                <button type="button" class="btn btn-success" id="btn-update-mctest">Cập nhật</button>
             </div>
         </div>
     </div>
