Update writing test overview settings

--- a/omc/webapp/templates/contests/admin.html
+++ b/omc/webapp/templates/contests/admin.html
@@ -35,4 +35,5 @@ var updateUrl ='{% url 'contests:update' %}';
 
 <script type="text/javascript" src="{%  static 'scripts/contest-settings.js' %}"></script>
 <script type="text/javascript" src="{%  static 'scripts/contest-mctest-settings.js' %}"></script>
+<script type="text/javascript" src="{%  static 'scripts/contest-writingtest-settings.js' %}"></script>
 {% endblock %}
