--- a/omc/webapp/templates/contests/admin_tab_settings_writing_test.html
+++ b/omc/webapp/templates/contests/admin_tab_settings_writing_test.html
@@ -1,38 +1,31 @@
 <div id="tab-writing-test" class="tab-pane fade">
+    <div id="writingtest-alert-frame"></div>
     <h4>Cấu hình</h4>
     <div class="form-horizontal">
         <div class="form-group">
             <label class="control-label col-md-3" for="contest-name">Sử dụng phần thi</label>
             <div class="col-md-9">
-                <input type="checkbox">
+                <input type="checkbox" id="use-writingtest" {% if contest.use_writing_test %}checked{% endif %}>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-md-3" for="contest-name">Thời gian thi (phút)</label>
             <div class="col-md-9">
                 <div class="form-inline">
-                    <input type="number" class="form-control">
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-md-3" for="contest-name">Số câu hỏi</label>
-            <div class="col-md-9">
-                <div class="form-inline">
-                    <input type="number" class="form-control">
+                     <input type="number" class="form-control" min="0" value="{{ contest.writing_test_time }}" id="writingtest-time">
                 </div>
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-offset-3 col-md-9">
-                <button type="submit" class="btn btn-success">Cập nhật</button>
+                <button type="button" class="btn btn-success" id="btn-update-writingtest">Cập nhật</button>
             </div>
         </div>
     </div>
     <hr>
     <h4>Danh sách câu hỏi</h4>
     <div class="form-group">
-    <div class="btn btn-default"></div>
+        <div class="btn btn-default"></div>
     </div>
     <div class="panel-group" id="questions">
         <div class="panel panel-default">
