--- a/omc/webapp/templates/contests/admin.html
+++ b/omc/webapp/templates/contests/admin.html
@@ -31,6 +31,7 @@
 <script type="text/javascript">
 var contestId = {{ contest.id }};
 var updateUrl ='{% url 'contests:update' %}';
+var uploadQuestionsUrl = '{% url 'contests:upload_questions' %}';
 </script>
 
 <script type="text/javascript" src="{%  static 'scripts/contest-settings.js' %}"></script>
