Update show questions function

--- a/omc/webapp/templates/contests/admin.html
+++ b/omc/webapp/templates/contests/admin.html
@@ -32,6 +32,7 @@
 var contestId = {{ contest.id }};
 var updateUrl ='{% url 'contests:update' %}';
 var uploadQuestionsUrl = '{% url 'contests:upload_questions' %}';
+var questionsUrl = '{% url 'contests:questions' %}';
 </script>
 
 <script type="text/javascript" src="{%  static 'scripts/contest-settings.js' %}"></script>
