--- a/omc/webapp/templates/contests/mc_test.html
+++ b/omc/webapp/templates/contests/mc_test.html
@@ -20,6 +20,16 @@
             <button class="btn btn-success btn-sm btn-submit" id="btn-submit">Nộp bài</button>
         </div>
     </div>
+    <div class="tabs-group">
+        <ul class="nav nav-tabs">
+            <li class="active">
+                <a href="#tab-choice-questions" data-toggle="tab"> Trắc nghiệm</a>
+            </li>
+            <li>
+                <a href="#tab-essay-questions" data-toggle="tab"> Tự luận</a>
+            </li>
+        </ul>
+    </div>
 </div>
 <div class="row contest-content">
     <div class="col-lg-12">
