--- a/omc/webapp/templates/contests/layout.html
+++ b/omc/webapp/templates/contests/layout.html
@@ -4,13 +4,15 @@
 
 {% block styles %}
 <link rel="stylesheet" type="text/css" href="{% static 'styles/contest.css' %}">
+
 {% endblock styles %}
 
 {% block content %}
 <div class="row">
     <div class="col-lg-12">
+        {% block before_page_header %}{% endblock %}
         <h1 class="page-header">
-            {{ contest.name }}
+           <a href="{% url 'webapp:contest_overview' %}?id={{ contest.id }}">{{ contest.name }}</a>  
         </h1>
     </div>
 </div>
