--- a/omc/webapp/templates/contests/overview.html
+++ b/omc/webapp/templates/contests/overview.html
@@ -1,21 +1,50 @@
 {% extends 'contests/layout.html' %}
 
+{% block before_page_header %}
+{% if can_manage %}
+<div class="pull-right">
+    <a class="btn btn-default" href="{% url 'webapp:contest_admin' %}?id={{ contest.id }}"><i class="glyphicon glyphicon-cog"></i></a>
+</div>
+{% endif %}
+{% endblock %}
+
 {% block child_content %}
 <div class="row">
     <div class="col-lg-12">
         <div class="event-info">
             <p>
-                <i class="glyphicon glyphicon-home"></i><a href="#">Tổ chức 1</a>
-                <br>
-                <i class="glyphicon glyphicon-time"></i>01/03/2017 - 00:00:00
+                <i class="glyphicon glyphicon-time"></i>{% if contest.time_string %}{{contest.time_string}}{% else %}<em>Chưa xác định</em>{% endif %}
             </p>
         </div>
-        <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p>
+        <p>{% if contest.description %}{{contest.description}}{% else %}<em>Chưa có mô tả</em>{% endif %}</p>
     </div>
 </div>
+{% if can_participate %}
+{% if user.id and remaining > 0 %}
 <div class="row">
     <div class="col-lg-12 text-center">
         <a class="btn btn-success" href="{% url 'webapp:contest_mc_test' %}">Vào làm bài</a>
     </div>
 </div>
-{% endblock child_content %}
+{% endif %}
+{% endif %}
+
+{% if user.id %}
+<div class="row">
+    <div class="col-lg-12">
+        <h4>Kết quả các lượt thi</h4>
+        <div class="table-responsive">
+            <table class="table table-striped table-bordered" id="matches-table">
+                <thead>
+                    <th>Lượt thi</th>
+                    <th>Số câu đúng</th>
+                    <th>Thời gian thi</th>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+{% endif %}
+{% endblock %}
