--- a/omc/webapp/templates/contests/admin_tab_settings.html
+++ b/omc/webapp/templates/contests/admin_tab_settings.html
@@ -1,4 +1,9 @@
 <div id="tab-settings" class="tab-pane fade in active">
+<div class="row">
+    <div class="col-lg-12">
+        <div id="alert-frame"></div>  
+    </div>
+</div>
     <div class="row">
         <div class="col-lg-2 col-md-3 col-sm-4">
             <ul class="nav nav-pills nav-stacked">
