--- a/omc/webapp/templates/contests/admin_tab_settings_overview.html
+++ b/omc/webapp/templates/contests/admin_tab_settings_overview.html
@@ -16,9 +16,17 @@
                         <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
                     </div>
                     <div class="input-group date" id="contest-to-time">
-                        <input type="text" class="form-control" placeholder="Đến" value="{% if contest.to_time %}{{ contest.to_time }}{% endif %}"/>
+                        <input type="text" class="form-control" placeholder="Đến" value="{% if contest.to_time %}{{ contest.to_time }}{% endif %}" />
                         <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-md-2" for="contest-name">Thời gian thi (phút)</label>
+            <div class="col-md-10">
+                <div class="form-inline">
+                    <input type="number" class="form-control" min="0" value="{{ contest.contest_time }}" id="contest-time">
                 </div>
             </div>
         </div>
