--- a/omc/webapp/templates/contests/modal_upload_mc_questions.html
+++ b/omc/webapp/templates/contests/modal_upload_mc_questions.html
@@ -1,4 +1,4 @@
-<div id="modal-upload-mctest-questions" class="modal fade" role="dialog">
+<div id="modal-upload-mc-questions" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <!-- Modal content-->
         <div class="modal-content">
@@ -7,11 +7,11 @@
                 <h4 class="modal-title">Cập nhật danh sách câu hỏi trắc nghiệm</h4>
             </div>
             <div class="modal-body">
-                <form id="form-upload-mctest-questions">
+                <form id="form-upload-mc-questions">
                     <input type="hidden" name="type" value="mc"> {% csrf_token %}
                     <div class="form-group">
                         <label>Tên cuộc thi</label>
-                        <input type="file" class="form-control-static" id="file-mctest-questions" name="file">
+                        <input type="file" class="form-control-static" id="file-mc-questions" name="file">
                     </div>
                 </form>
             </div>
