--- a/omc/webapp/templates/contests/admin_tab_settings_mc_test.html
+++ b/omc/webapp/templates/contests/admin_tab_settings_mc_test.html
@@ -12,7 +12,7 @@
             <label class="control-label col-md-3" for="contest-name">Số câu hỏi</label>
             <div class="col-md-9">
                 <div class="form-inline">
-                    <input type="number" class="form-control" min="0" value="{{ contest.mc_test_questions }}" id="mctest-questions">
+                    <input type="number" class="form-control" min="0" value="{{ contest.mc_questions }}" id="mctest-questions">
                 </div>
             </div>
         </div>
