--- a/omc/webapp/templates/contests/do_contest.html
+++ b/omc/webapp/templates/contests/do_contest.html
@@ -20,199 +20,81 @@
             <button class="btn btn-success btn-sm btn-submit" id="btn-submit">Nộp bài</button>
         </div>
     </div>
-    <div class="tabs-group">
+    {% if contest.use_mc_test and contest.use_writing_test %}
+    <div class="tabs-group" id="#tabs-group">
         <ul class="nav nav-tabs">
             <li class="active">
-                <a href="#tab-mc-test" data-toggle="tab"> Trắc nghiệm</a>
+                <a href="#tab-mc-questions" data-toggle="tab"> Trắc nghiệm</a>
             </li>
             <li>
                 <a href="#tab-writing-test" data-toggle="tab"> Tự luận</a>
             </li>
         </ul>
     </div>
+    {% endif %}
 </div>
 <div class="row contest-content">
     <div class="col-lg-12">
         <div class="tab-content">
-            <div id="tab-mc-test" class="tab-pane fade">
+            {% if contest.use_mc_test %}
+            <div id="tab-mc-questions" {% if contest.use_mc_test and contest.use_writing_test %}class="tab-pane fade in active" {% endif %}>
                 <div class="panel-group" id="mc-questions">
+                    {% for question in mc_questions %}
                     <div class="panel panel-default">
                         <div class="panel-body">
-                            <strong>Câu hỏi 1:</strong>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                            </p>
+                            <strong>Câu hỏi {{ question.view_id }}:</strong>
+                            <p>{{ question.content }}</p>
                             <div class="radio">
                                 <label>
-                                    <input type="radio" name="optradio">Option 1</label>
+                                    <input type="radio" name="{{ question.id }}" value="a">{{ question.a }}</label>
                             </div>
                             <div class="radio">
                                 <label>
-                                    <input type="radio" name="optradio">Option 2</label>
+                                    <input type="radio" name="{{ question.id }}" value="b">{{ question.b }}</label>
                             </div>
                             <div class="radio">
                                 <label>
-                                    <input type="radio" name="optradio">Option 3</label>
+                                    <input type="radio" name="{{ question.id }}" value="c">{{ question.c }}</label>
                             </div>
                             <div class="radio">
                                 <label>
-                                    <input type="radio" name="optradio">Option 3</label>
+                                    <input type="radio" name="{{ question.id }}" value="d">{{ question.d }}</label>
                             </div>
                         </div>
                     </div>
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <strong>Câu hỏi 2:</strong>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                            </p>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optradio">Option 1</label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optradio">Option 2</label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optradio">Option 3</label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optradio">Option 3</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <strong>Câu hỏi 3:</strong>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                            </p>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optradio">Option 1</label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optradio">Option 2</label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optradio">Option 3</label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optradio">Option 3</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <strong>Câu hỏi 3:</strong>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                            </p>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optradio">Option 1</label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optradio">Option 2</label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optradio">Option 3</label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optradio">Option 3</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <strong>Câu hỏi 3:</strong>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                            </p>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optradio">Option 1</label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optradio">Option 2</label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optradio">Option 3</label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optradio">Option 3</label>
-                            </div>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
-            <div id="tab-writing-test" class="tab-pane fade">
+            {% endif %}
+            {% if contest.use_writing_test %}
+            <div id="tab-writing-questions" {% if contest.use_mc_test and contest.use_writing_test %}class="tab-pane fade" {% endif %}>
                 <div class="panel-group" id="writing-questions">
+                    {% for question in mc_questions %}
                     <div class="panel panel-default">
                         <div class="panel-body">
-                            <strong>Câu hỏi 1:</strong>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                            </p>
+                            <strong>Câu hỏi {{ question.view_id }}:</strong>
+                            <p>{{ question.content }}</p>
                             <div class="form-group">
-                                <textarea class="form-control" rows="5"></textarea>
+                                <textarea class="form-control" rows="5" name="wt-{{ question.id }}"></textarea>
                             </div>
                         </div>
                     </div>
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <strong>Câu hỏi 2:</strong>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                            </p>
-                            <div class="form-group">
-                                <textarea class="form-control" rows="5"></textarea>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <strong>Câu hỏi 3:</strong>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                            </p>
-                            <div class="form-group">
-                                <textarea class="form-control" rows="5"></textarea>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <strong>Câu hỏi 4:</strong>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                            </p>
-                            <div class="form-group">
-                                <textarea class="form-control" rows="5"></textarea>
-                            </div>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
+            {% endif %}
         </div>
-
-        
     </div>
 </div>
 {% endblock %}
 
 {% block scripts %}
-<script type="text/javascript" src="{% static 'scripts/contest-docontest.js' %}"></script>
+<script type="text/javascript">
+var contestId = {{contest.id}};
+var initRemainingTime = {{ remaining }};
+var contestOverviewUrl = '{% url 'webapp:contest_overview' %}?id={{ contest.id }}';
+var apiContestUrl = '{% url 'contests:do_contest' %}';
+</script>
+
+<script type="text/javascript" src="{% static 'scripts/contests/do-contest.js' %}"></script>
 {% endblock %}
