--- a/omc/webapp/templates/contests/overview.html
+++ b/omc/webapp/templates/contests/overview.html
@@ -1,5 +1,7 @@
 {% extends 'contests/layout.html' %}
 
+{% load staticfiles %}
+
 {% block before_page_header %}
 {% if can_manage %}
 <div class="pull-right">
@@ -23,7 +25,7 @@
 {% if user.id and remaining > 0 %}
 <div class="row">
     <div class="col-lg-12 text-center">
-        <a class="btn btn-success" href="{% url 'webapp:contest_do_contest' %}?id={{ contest.id }}">Vào làm bài</a>
+        <button type="button" class="btn btn-success" id="btn-start">Vào làm bài</button>
     </div>
 </div>
 {% endif %}
@@ -47,4 +49,14 @@
     </div>
 </div>
 {% endif %}
+{% endblock %}
+
+{% block scripts %}
+<script type="text/javascript">
+var contestId = {{ contest.id }};
+var apiContestUrl = '{% url 'contests:do_contest' %}';
+var doContestUrl = '{% url 'webapp:contest_do_contest' %}?id={{ contest.id }}';
+</script>
+
+<script type="text/javascript" src={% static 'scripts/contests/overview.js' %}></script>
 {% endblock %}
