--- a/omc/webapp/templates/contests/overview.html
+++ b/omc/webapp/templates/contests/overview.html
@@ -18,7 +18,7 @@
                 <i class="glyphicon glyphicon-time"></i>{% if contest.time_string %}{{contest.time_string}}{% else %}<em>Chưa xác định</em>{% endif %}
             </p>
         </div>
-        <p>{% if contest.description %}{{contest.description}}{% else %}<em>Chưa có mô tả</em>{% endif %}</p>
+        <p>{% if contest.description %}{{ contest.description|safe }}{% else %}<em>Chưa có mô tả</em>{% endif %}</p>
     </div>
 </div>
 {% if can_participate %}
