--- a/omc/webapp/templates/contests/overview.html
+++ b/omc/webapp/templates/contests/overview.html
@@ -22,7 +22,7 @@
     </div>
 </div>
 {% if can_participate %}
-{% if user.id and remaining > 0 %}
+{% if user.id and remaining_matches > 0 %}
 <div class="row">
     <div class="col-lg-12 text-center">
         <button type="button" class="btn btn-success" id="btn-start">Vào làm bài</button>
