--- a/omc/webapp/templates/contests/admin/tab_contestants.html
+++ b/omc/webapp/templates/contests/admin/tab_contestants.html
@@ -1,14 +1,20 @@
 <div id="tab-contestants" class="tab-pane fade">
+    {% include 'utilities/paginator.html' %}
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
             <thead>
                 <th>#</th>
                 <th>Họ và tên</th>
-                <th>Thời gian bắt đầu</th>
+                <th>Lượt thi</th>
                 <th>Thời gian thi</th>
+                {% if contest.use_mc_test %}
+                <th>Số câu đúng</th>
+                {% endif %}
                 <th></th>
             </thead>
-            <tbody></tbody>
+            <tbody id="tbody-contestants">
+            </tbody>
         </table>
     </div>
+    {% include 'utilities/paginator.html' %}
 </div>
