Implement some functions

--- a/omc/webapp/templates/contests/admin/admin.html
+++ b/omc/webapp/templates/contests/admin/admin.html
@@ -34,6 +34,7 @@ var updateUrl ='{% url 'contests:update' %}';
 var uploadQuestionsUrl = '{% url 'contests:upload_questions' %}';
 var questionsUrl = '{% url 'contests:questions' %}';
 var contestantsUrl = '{% url 'contests:contestants' %}';
+var matchDetailUrl = '{% url 'contests:match_detail' %}';
 </script>
 
 <script type="text/javascript" src="{% static 'scripts/utilities/pagination.js' %}"></script>
