--- a/omc/webapp/templates/contests/contests.html
+++ b/omc/webapp/templates/contests/contests.html
@@ -28,6 +28,7 @@
 var contestsApiUrl = '{% url 'contests:contests' %}';
 var contestAdminUrl = '{% url 'webapp:contest_admin' %}';
 var createApiUrl = '{% url 'contests:create' %}';
+var contestUrl = '{% url 'webapp:contest_overview' %}';
 </script>
 
 <script type="text/javascript" src="{% static 'scripts/contests-management.js' %}"></script>
