update index page

--- a/omc/webapp/templates/snippets/header.html
+++ b/omc/webapp/templates/snippets/header.html
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Hệ thống thi trực tuyến</a>
+            <a class="navbar-brand" href="{% url 'webapp:index' %}">Hệ thống thi trực tuyến</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
