--- a/omc/webapp/templates/index.html
+++ b/omc/webapp/templates/index.html
@@ -9,37 +9,18 @@
 {% block content %}
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Các hoạt động sắp diễn ra</h1>
-        <div class="panel-group" id="upcoming-events">
-            <div class="panel panel-default event">
-                <div class="panel-body">
-                    <div class="pull-right"><span class="label label-danger">Đã tham gia</span></div>
-                    <h3><a href="{% url 'webapp:contest_overview' %}">Hoạt động 1</a></h3>
-                    <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p>
-                    <p>
-                        <i class="glyphicon glyphicon-home"></i><a href="#">Tổ chức 1</a>
-                        <br>
-                        <i class="glyphicon glyphicon-time"></i>01/03/2017 - 00:00:00
-                    </p>
-                </div>
-            </div>
-            <div class="panel panel-default event">
-                <div class="panel-body">
-                    <div class="pull-right"><span class="label label-danger">Đã tham gia</span></div>
-                    <h3><a href="{% url 'webapp:contest_overview' %}">Hoạt động 2</a></h3>
-                    <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p>
-                    <p>
-                        <i class="glyphicon glyphicon-home"></i><a href="#">Tổ chức 2</a>
-                        <br>
-                        <i class="glyphicon glyphicon-time"></i>01/03/2017 - 00:00:00
-                    </p>
-                </div>
-            </div>
+        <h1 class="page-header">Các hoạt động đang diễn ra</h1>
+        <div class="panel-group" id="current-contests">
         </div>
     </div>
 </div>
 {% endblock %}
 
 {% block scripts %}
+<script type="text/javascript">
+var contestsApiUrl = '{% url 'contests:contests' %}';
+var contestUrl = '{% url 'webapp:contest_overview' %}';
+</script>
+
 <script type="text/javascript" src="{% static 'scripts/index.js' %}"></script>
 {% endblock %}
