--- a/omc/webapp/templates/contests/contests.html
+++ b/omc/webapp/templates/contests/contests.html
@@ -2,6 +2,8 @@
 
 {% load staticfiles %}
 
+{% block title %}Quản lý các cuộc thi{% endblock %}
+
 {% block styles %}
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.45/css/bootstrap-datetimepicker.min.css">
 {% endblock %}
