--- a/omc/webapp/templates/index.html
+++ b/omc/webapp/templates/index.html
@@ -2,6 +2,8 @@
 
 {% load staticfiles %}
 
+{% block title %}Trang chủ{% endblock %}
+
 {% block styles %}
 <link rel="stylesheet" type="text/css" href="{% static 'styles/index.css' %}">
 {% endblock styles %}
