--- a/omc/webapp/templates/layout.html
+++ b/omc/webapp/templates/layout.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title></title>
+    <title>{% block title %}{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,6 +20,8 @@
     {% endblock %}
     </div>
     
+    {% include 'snippets/footer.html' %}
+
     {% include 'snippets/scripts.html' %}
 
     {% block scripts %}
