--- a/omc/webapp/templates/snippets/header.html
+++ b/omc/webapp/templates/snippets/header.html
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'webapp:index' %}">Hệ thống thi trực tuyến</a>
+            <a class="navbar-brand" href="{% url 'webapp:index' %}">SAM - Thi trực tuyến</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
@@ -17,8 +17,8 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{ user }} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url 'webapp:user' %}">Thông tin tài khoản</a></li>
-                        <li><a href="#">Đổi mật khẩu</a></li>
+                        <!-- <li><a href="{% url 'webapp:user' %}">Thông tin tài khoản</a></li> -->
+                        <!-- <li><a href="#">Đổi mật khẩu</a></li> -->
                         <li><a href="{% url 'webapp:logout' %}">Đăng xuất</a></li>
                     </ul>
                 </li>
