Add delete contest function

--- a/omc/webapp/templates/contests/admin/admin.html
+++ b/omc/webapp/templates/contests/admin/admin.html
@@ -35,6 +35,8 @@ var uploadQuestionsUrl = '{% url 'contests:upload_questions' %}';
 var questionsUrl = '{% url 'contests:questions' %}';
 var contestantsUrl = '{% url 'contests:contestants' %}';
 var matchDetailUrl = '{% url 'contests:match_detail' %}';
+var deleteUrl = '{% url 'contests:delete' %}';
+var managementUrl = '{% url 'webapp:contests' %}';
 </script>
 
 <script type="text/javascript" src="{% static 'scripts/utilities/pagination.js' %}"></script>
