Update: Update match detail modal UI

--- a/omc/webapp/templates/contests/admin/admin.html
+++ b/omc/webapp/templates/contests/admin/admin.html
@@ -6,6 +6,7 @@
 {{ block.super }}
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.45/css/bootstrap-datetimepicker.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.2/summernote.css">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/contest-admin.css' %}">
 {% endblock styles %}
 
 {% block child_content %}
