Fix error: input ids are incorrect

--- a/omc/webapp/templates/change_password.html
+++ b/omc/webapp/templates/change_password.html
@@ -18,11 +18,11 @@
             </div>
             <div class="form-group">
                 <label>Mật khẩu mới</label>
-                <input type="password" class="form-control" id="'new-password1" />
+                <input type="password" class="form-control" id="new-password1" />
             </div>
             <div class="form-group">
                 <label>Xác nhật khẩu mới</label>
-                <input type="password" class="form-control" id="'new-password2" />
+                <input type="password" class="form-control" id="new-password2" />
             </div>
             <div class="form-group" id="message-form" style="display: none">
                 <div class="text-danger" id="message"></div>
